--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,15 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <div>
+    <% if user_signed_in? %>
+      <%= link_to "Profile", edit_user_registration_path %>
+      <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <% link_to "Sign Up", new_user_registration_path %>
+      <%= link_to "Log In", new_user_session_path %>
+    <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
