Allow user to set completed state for tasks

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -14,6 +14,8 @@
   <div>
     <%= form.label :content, style: "display: block" %>
     <%= form.text_area :content %>
+    <%= form.label :completed, style: "display: block" %>
+    <%= form.datetime_field :completed %>
   </div>
 
   <div>
